--- a/data/root/styles.css
+++ b/data/root/styles.css
@@ -1,6 +1,10 @@
 
 #sentiment-gauge {
-	height: 400px;
+	height: 300px;
+}
+
+#sentiment-history {
+	height: 300px;
 }
 
 #key-phrases {outline: 2px solid #000; padding: 8px; margin: 8px; }
@@ -8,6 +12,7 @@
 .header {
 	background-color: #DEE0E4;
 	text-align: center;
+	padding: 10px;
 }
 
 .page-container {
@@ -28,6 +33,7 @@
 	width: 49.2%;
 	text-align: center;
 }
+
 .col:first-child { margin-left: 0; }
 
 .group:before,
