--- a/data/templates/dashboard/dashboard.tmpl
+++ b/data/templates/dashboard/dashboard.tmpl
@@ -33,7 +33,7 @@
             <div class="header">
                 <h2>Detected Key Phrases</h2>
                 <div id="key-phrases">
-                    <p>Waiting for speech...</p>
+                    <p>Start talking to see key phrases here...</p>
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
                 min: 0,
                 max: 12,
                 title: {
-                    y: -150,
+                    y: -120,
                     text: 'Current Sentiment',
                     style: {
                         color: 'black',
@@ -137,6 +137,8 @@
             chart: {
                 backgroundColor:'rgba(255, 255, 255, 0.2)'
             },
+
+            colors: ['#55BF3B','#DDDF0D','#DF5353'],
 
             title: {
                 text: 'Sentiment History',
